--- a/About/about.css
+++ b/About/about.css
@@ -1,3 +1,62 @@
-img{	
+#navbar{
+	font-family: 'Poppins', sans-serif;
+	background: #FFBEA1;
+	padding: 20px;
+	weight: 100;
+	font-display: swap;
+}
+
+#navbar a{
+	background: #ff9242;
+	color: #000000;
+	padding: 5px;
+	text-decoration: none;
+}
+
+#navbar a:hover{
+	text-decoration: underline;
+	color: #FFFFFF;
+	background: #000000;
+}
+
+header h1{
+	text-align: center;
+	font-size: 4em;
+	color: #000000;
+	font-family: 'Poppins', sans-serif;
+	font-style: italic;
+	weight: 500;
+	font-display: swap;
+}
+
+#container{
+	font-family: 'Poppins', sans-serif;
+	font-weight: 200;
+	font-size: 1.25em;
+	color: #000000;
+	text-align: left;
+	text-indent: 50px;
+}
+
+.Marco{
+	display: grid;
+	grid-template-areas:
+	'img'
+	'p';
 	width: 40%;
+	padding-left: 30%;
+}
+
+.Marco img{
+	width: 50%;
+	padding-left: 25%;
+}
+
+p{
+	margin: 0;
+	padding: 0;
+}
+
+hr{
+	border: 2px solid #FFBEA1;
 }
